<resources>
    <string name="app_name">&appname;</string>
    <string name="middleware_url">http://10.0.2.2:8081</string>
    <string name="title_activity_main">&appname;</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">lyutyy.mail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_logout">Выйти</string>
    <string name="menu_docs_view">Мои документы</string>
    <string name="menu_docs_to_sign">Документы на рассмотрение</string>
    <string name="menu_create_doc">Новый документ</string>
    <string name="placeholder">placeholder</string>
    <string name="date_sample">20.02.21</string>
    <string name="doc_title_sample">Приказ об отчислении</string>
    <string name="description_sample">Студенты ПИ</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="unexpected_error">Произошла непредвиденная ошибка, попробуйте позже или свяжитесь с разработчиком.
    </string>
    <string name="welcome">Добро пожаловать %s!</string>
    <string name="invalid_username">Неверный формат e-mail</string>
    <string name="invalid_password">Пароль должен сожержать минимум 5 символов</string>
    <string name="login_failed">Неверные логин или пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="sign_in">Вход</string>
    <string name="email_hint">E-mail</string>
    <string name="login_password_hint">Пароль</string>
    <string name="sign_up_hint">Есть аккаунт? Войдите</string>
    <string name="sign_in_hint">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="login_background">фон</string>
    <string name="validation_failed">Не все поля заполнены корректно</string>
    <string name="doc_edited">\'%s\' успешно изменен</string>
    <string name="ok">Ок</string>
    <string name="action_approve">Одобрить</string>
    <string name="action_later">Пропустить</string>
    <string name="action_edit">Изменить</string>
    <string name="action_reject">Отклонить</string>
    <string name="reason_for_reject">Укажите причину отказа</string>
    <string name="goto_wizard_title">Использовать мастер создания документа?</string>
    <string name="answer_yes">Да</string>
    <string name="logout_hint">До свидания %s!</string>
    <string name="doc_approved_hint">Документ одобрен участником %s</string>
    <string name="doc_rejected_hint">Документ отклонен участником %s</string>
    <string name="doc_created_hint">Создан документ %s</string>
    <string name="logout_dialog_title">Вы действительно хотите выйти?</string>
    <string name="not_supported_yet_dialog_title">Еще не поддерживатся</string>
    <string name="answer_no">Нет</string>
    <string name="dont_show_anymore">Больше не показывать</string>
    <string name="cancel">Отмена</string>
    <string name="select_all">Выбрать все</string>
    <string name="submit_reject">Подтвердить отказ</string>
    <string name="apply">Применить</string>
    <string name="required_field">Обязательное поле</string>
    <string name="close">Закрыть</string>
    <string name="no_more_docs">У вас пока нет документов на рассмотрение.</string>
    <string name="configure_filters_title">Настройка отображения документов</string>
    <string name="is_completed_docs_shown">Показывать завершенные документы</string>
    <string name="is_rejected_docs_shown">Показывать отклоненные документы</string>
    <string name="doc_title">Приказ о темах выпускных квалификационных работ студентов</string>
    <string name="doc_date">29.04.2020</string>
    <string name="doc_date_prefix">Дата создания:</string>
    <string name="doc_owner">Л.И. Сучкова</string>
    <string name="doc_owner_prefix">Владелец:</string>
    <string name="doc_sign1">С.А. Кантор</string>
    <string name="doc_type_selection_title">Выберите тип документа</string>
    <string name="doc_type_general">Другое</string>
    <string name="doc_type_graduated_expelling">Представление-отчисление</string>
    <string name="doc_type_practice_permission">Приказ о допуске на практику</string>
    <string name="doc_type_graduation_thesis_topics">Приказ о темах выпускных работ</string>
    <string name="doc_sign2">С.М. Старолетов</string>
    <string name="doc_signs">Подписи:</string>
    <string name="doc_status">Завершен</string>
    <string name="doc_reject_reason">Причина:</string>
    <string name="doc_status_processing">На рассмотрении</string>
    <string name="study_type_full_time">Очный</string>
    <string name="study_type_part_time">Очно-заочный</string>
    <string name="study_type_self_study">Заочный</string>
    <string name="doc_status_approved">Одобрен</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="on_government_pay_yes">Бюджет</string>
    <string name="on_government_pay_no">Внебюджет</string>
    <string name="doc_status_rejected">Отклонен</string>
    <string name="doc_status_closed">Завершен</string>
    <string name="doc_status_unknown">Неизвестен</string>
    <string name="doc_status_prefix">Статус:</string>
    <string name="doc_content">
        "В соответствии с учебным планом и СК ОПД 01-139-2019 «Положение о выпускной квалификационной работе по
        образовательным программам высшего образования – программам бакалавриата, программам специалитета, программам
        магистратуры» утвердить темы и руководителей выпускных квалификационных работ студентам факультета
        информационных технологий групп ПИ-71,-72 очной формы обучения по направлению бакалавриата 09.03.04 Программная
        инженерия (профиль Разработка программно-информационных систем) согласно списку:\n\n"
        "Группа ПИ-71\n\n"
        "Агафонов Анатолий Алексеевич, Тема: Применение технологии верификации акторных взаимодействующих систем (на
        примере Erlang-программ), науч.рук.:Старолетов С.М., к.ф.-м.н., доцент, доцент кафедры ПМ\n\n"
        "Куторкин Артем Сергеевич; Борзенко Максим Александрович, Тема: Проектирование и реализация системы
        распознавания сложных изображений на основе метода семантической коррекции, науч. рук.: Корней А.И. программист
        ООО «Энтерра-Софт»;Крючкова Е.Н., к.ф.-м.н., доцент, профессор каф. ПМ\n\n"

    </string>
</resources>