<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/navDocsToSign"
                android:icon="@drawable/ic_menu_docs_to_sign"
                android:title="@string/menu_docs_to_sign"/>
        <item
                android:id="@+id/navDocsView"
                android:icon="@drawable/ic_menu_view_docs"
                android:title="@string/menu_docs_view"/>
        <item
                android:id="@+id/navCreateDoc"
                android:icon="@drawable/ic_menu_create_doc"
                android:title="@string/menu_create_doc"/>
        <item
                android:id="@+id/navSettings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout"/>
    </group>
</menu>