<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/loginCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:background="@color/whiteCardColor">

    <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/loginViewsMargin">

        <TextView
                style="@style/headerTextPrimary"
                android:text="@string/sign_in"
                android:layout_marginTop="@dimen/loginViewsMargin"/>


        <EditText
                android:id="@+id/loginEditText"
                style="@style/modifiedEditText"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:layout_marginVertical="10dp"
                android:maxLines="1"
                android:hint="@string/email_hint"/>

        <EditText
                android:id="@+id/passEditText"
                style="@style/modifiedEditText"
                android:layout_marginVertical="10dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword" />

        <ProgressBar
                android:id="@+id/authProgressBar"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintVertical_bias="0.3"/>
        <Button
                android:id="@+id/submitAuthButton"
                android:layout_marginVertical="10dp"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="@string/ok"/>

        <TextView
                android:id="@+id/changeFormTextView"
                style="@style/parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/sign_in_hint"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>
