<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@android:color/darker_gray">

    <ImageView
            android:id="@+id/item_image"
            android:src="@drawable/doc_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d_100dp"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
        <LinearLayout
                android:orientation="vertical"
                android:layout_margin="@dimen/d_16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/item_title"
                    android:text="@string/doc_title"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="26sp"/>

            <TextView
                    android:id="@+id/item_owner"
                    android:text="@string/doc_owner"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>
            <TextView
                    android:id="@+id/item_date"
                    android:text="@string/doc_date"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

            <TextView
                    android:id="@+id/item_status"
                    android:text="@string/doc_status"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>

            <LinearLayout
                    android:id="@+id/signsContainer"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@android:color/black"
                          android:textSize="20sp"
                          android:text="@string/doc_signs"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/item_content"
                    android:text="@string/doc_content"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
            android:id="@+id/left_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_black">

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/rejectImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_reject"
                    android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/rejectHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_red"
                    android:textSize="70sp"
                    android:text="@string/action_reject"/>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/right_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_black">

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/approveImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_approve"
                    android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/approveHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_green"
                    android:textSize="70sp"
                    android:text="@string/action_approve"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/top_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_black">

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_later"
                    android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/laterHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ACACAC"
                    android:textSize="70sp"
                    android:text="@string/action_later"/>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/bottom_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/overlay_black">

        <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:layout_gravity="center"/>

            <TextView
                    android:id="@+id/editHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ACACAC"
                    android:textSize="70sp"
                    android:text="@string/action_edit"/>
        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>